# design-gan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: launch.json
docs/: index.html
scripts/: build_site.py  capture_readme_shots.py
src/design_gan/: __init__.py  cli.py  conversation_generator.py  critic.py  demo.py  generator.py  orchestrator.py  renderer.py  scorer.py  storage.py  transcript_renderer.py  user_simulator.py  viewer.py
src/design_gan/demo_assets/: iter_1.html  iter_2.html  iter_3.html  iter_4.html
src/design_gan/static/: app.js  scrub.js  style.css
tests/: conftest.py  test_cli.py  test_conversation_generator.py  test_conversation_loop.py  test_cus_critic.py  test_demo.py  test_ensemble.py  test_extractors.py  test_orchestrator.py  test_scorer.py  test_storage.py  test_transcript_renderer.py  test_viewer.py
