[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "design-gan"
version = "0.1.0"
description = "Autoresearch-style dual-agent loop that evolves single-page websites by critiquing them on the System Usability Scale."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.64",
    "playwright>=1.48.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
design-gan = "design_gan.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["src/design_gan"]

[tool.hatch.build.targets.wheel.force-include]
"src/design_gan/static" = "design_gan/static"
"src/design_gan/demo_assets" = "design_gan/demo_assets"

[tool.ruff]
line-length = 100
target-version = "py311"
